@@ -23,14 +23,21 @@ class WinSearch(object):
         self.parent = parent
 
         self.win = gtk.Dialog(_('Search'), self.parent,
-                gtk.DIALOG_MODAL|gtk.DIALOG_DESTROY_WITH_PARENT,
-                (gtk.STOCK_FIND, gtk.RESPONSE_APPLY,
-                gtk.STOCK_NEW, gtk.RESPONSE_ACCEPT,
-                gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL,
-                gtk.STOCK_OK, gtk.RESPONSE_OK))
+                gtk.DIALOG_MODAL|gtk.DIALOG_DESTROY_WITH_PARENT)
         self.win.set_icon(TRYTON_ICON)
         self.win.set_has_separator(True)
         self.win.set_default_response(gtk.RESPONSE_APPLY)
+
+        self.accel_group = gtk.AccelGroup()
+        self.win.add_accel_group(self.accel_group)
+
+        self.but_find = self.win.add_button(gtk.STOCK_FIND, gtk.RESPONSE_APPLY)
+        self.but_new = self.win.add_button(gtk.STOCK_NEW, gtk.RESPONSE_ACCEPT)
+        self.but_cancel = self.win.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL)
+        self.but_ok = self.win.add_button(gtk.STOCK_OK, gtk.RESPONSE_OK)
+        self.but_ok.add_accelerator('clicked', self.accel_group,
+                gtk.keysyms.Return, gtk.gdk.CONTROL_MASK, gtk.ACCEL_VISIBLE)
+
         hbox = gtk.HBox()
         hbox.show()
         self.win.vbox.pack_start(hbox, expand=False, fill=True)
