@@ -1,3 +1,4 @@
+* Add AccelGroup on search windows (CTRL+Return)
 * Use same keyboard shortcut for xxx2many than for other fields
 
 Version 1.4.0 - 2009-10-19
